# cc-flytrap

./: .gitignore  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  brainrot.py  cc-flytrap  cc-flytrap.py  install.sh  ledger.py  perf.py
.github/workflows/: release.yml
docs/: architecture.md  install.md  reference.md
docs/archive/lua/: cc-flytrap.lua
lua/: README.md
rs/: README.md
rs/src/: config.rs  handler.rs  install.rs  ledger_read.rs  lifecycle.rs  main.rs  proxy.rs  sse_tap.rs  trust.rs
rs/src/brainrot/: diff.rs  replay.rs  score.rs  session.rs  week.rs
rs/src/tui/: chrome.rs  mod.rs  style.rs
rs/src/tui/panels/: brainrot.rs  diagnosis.rs  heat.rs  ledger.rs  mod.rs  overlay.rs  proxy.rs  stream.rs
src/: config.rs  flytrap.rs  handler.rs  install.rs  ledger.rs  ledger_read.rs  lifecycle.rs  main.rs  perf.rs  seed.rs  service.rs  session.rs  sse_tap.rs  theme.rs  trust.rs
src/brainrot/: aggregate.rs  debug_scores.rs  diff.rs  mod.rs  score.rs  split.rs  today.rs  week.rs
src/tui/: chrome.rs  mod.rs  style.rs
src/tui/panels/: brainrot.rs  diagnosis.rs  heat.rs  ledger.rs  metrics.rs  mod.rs  models.rs  overlay.rs  proxy.rs  system.rs
systemd/: com.ccft.service
