[package]
name = "ccft"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "ccft - an agentic self improvement tool"

[[bin]]
name = "ccft"
path = "src/main.rs"

[dependencies]
hudsucker = { version = "0.24", default-features = false, features = ["rcgen-ca", "rustls-client", "decoder"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http-body-util = "0.1"
bytes = "1"
hyper = "1"
rcgen = { version = "0.14", features = ["x509-parser", "pem"] }
time = { version = "0.3", features = ["local-offset", "macros", "parsing", "formatting"] }
serde_json = "1"
sha1 = "0.10"
hex = "0.4"
gethostname = "1"
once_cell = "1"
dashmap = "6"
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
